@@ -19,6 +19,10 @@
 
 </dl>
 
+<h2>Commands</h2>
+
+<p>None</p>
+
 <h2>Sender Action</h2>
 
 <p>None</p>
