@@ -100,12 +100,13 @@ static void get_package(ibuf* in)
   if (!respond(resp)) die("EOF while sending response");
 }
 
-static int mainloop(void)
+static int mainloop(const struct command* commands)
 {
   alarm(3600);
   for (;;)
     get_package(&inbuf);
   return 0;
+  (void)commands;
 }
 
 struct protocol protocol = {
